--- a/samuraitravel/src/main/resources/application.properties
+++ b/samuraitravel/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=kine00sql49
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.sql.init.encoding=utf-8
 spring.sql.init.mode=always
-
+spring.servlet.multipart.max-file-size=5MB
