--- a/samuraitravel/src/main/resources/application-development.properties
+++ b/samuraitravel/src/main/resources/application-development.properties
@@ -1,18 +1,14 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/samurai_travel_db
+spring.datasource.username=root
+spring.datasource.password=kine00sql49
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.sql.init.encoding=utf-8
 spring.sql.init.mode=always
- 
 spring.servlet.multipart.max-file-size=5MB
- 
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=kine2enik@gmail.com
+spring.mail.password=vowe ctyk ypru umvk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
- 
-stripe.api-key=${STRIPE_API_KEY}
-stripe.webhook-secret=${STRIPE_WEBHOOK_SECRET}
